Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Made the CSS validity link, in the conformance statement portlet, explicitly
  ask for validation against the CSS 2.1 spec, otherwise the W3C CSS validator
  tries to validate against the CSS 2 spec.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-