@@ -9,6 +9,7 @@ Bug fixes:
 - Made the CSS validity link, in the conformance statement portlet, explicitly
   ask for validation against the CSS 2.1 spec, otherwise the W3C CSS validator
   tries to validate against the CSS 2 spec.
+- Fix SpecialUser API failure #1113
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
